--- a/model.ipynb
+++ b/model.ipynb
@@ -2,17 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "import cv2\n",
@@ -24,7 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Flatten, Dense, Lambda, Cropping2D, Dropout\n",
+    "from keras.layers import Flatten, Dense, Lambda, Cropping2D, Dropout, Input\n",
     "from keras.layers.convolutional import Convolution2D\n",
     "from keras.layers.pooling import MaxPooling2D\n",
     "from keras.optimizers import Adam"
@@ -165,21 +157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(?, 32, 80, 3)\n",
+      "(?, 15, 39, 24)\n",
+      "(?, 7, 19, 36)\n",
+      "(?, 5, 17, 48)\n",
+      "(?, 3, 15, 64)\n",
+      "(?, 1, 13, 64)\n",
+      "(?, ?)\n"
+     ]
+    }
+   ],
    "source": [
     "nvidia = Sequential()\n",
+    "x = Input((80, 80, 3))\n",
     "nvidia.add(Lambda(lambda x: x/127. - 1.0, input_shape=(80, 80, 3)))\n",
+    "lam = Lambda(lambda x: x/127. - 1.0)(x)\n",
     "nvidia.add(Cropping2D(cropping=((35, 13), (0, 0))))\n",
-    "nvidia.add(Convolution2D(24, 5, 5, border_mode='same', subsample=(2, 2), activation='relu'))\n",
-    "nvidia.add(Convolution2D(36, 5, 5, border_mode='same', subsample=(2, 2), activation='relu'))\n",
-    "nvidia.add(Dropout(0.5))\n",
-    "nvidia.add(Convolution2D(48, 5, 5, border_mode='same', activation='relu'))\n",
+    "crop = Cropping2D(cropping=((35, 13), (0, 0)))(lam)\n",
+    "print(crop.shape)\n",
+    "nvidia.add(Convolution2D(24, 3, 3, subsample=(2, 2), activation='relu'))\n",
+    "conv1 = Convolution2D(24, 3, 3, subsample=(2, 2), activation='relu')(crop)\n",
+    "print(conv1.shape)\n",
+    "nvidia.add(Convolution2D(36, 3, 3, subsample=(2, 2), activation='relu'))\n",
+    "conv2 = Convolution2D(36, 3, 3, subsample=(2, 2), activation='relu')(conv1)\n",
+    "print(conv2.shape)\n",
+    "nvidia.add(Convolution2D(48, 3, 3,  activation='relu'))\n",
+    "conv3 = Convolution2D(48, 3, 3, activation='relu')(conv2)\n",
+    "print(conv3.shape)\n",
     "nvidia.add(Convolution2D(64, 3, 3, activation='relu'))\n",
+    "conv4 = Convolution2D(64, 3, 3, activation='relu')(conv3)\n",
+    "print(conv4.shape)\n",
     "nvidia.add(Convolution2D(64, 3, 3, activation='relu'))\n",
+    "conv5 = Convolution2D(64, 3, 3, activation='relu')(conv4)\n",
+    "print(conv5.shape)\n",
     "nvidia.add(Dropout(0.5))\n",
     "nvidia.add(Flatten())\n",
+    "flat = Flatten()(conv5)\n",
+    "print(flat.shape)\n",
     "nvidia.add(Dense(1000))\n",
     "nvidia.add(Dense(100))\n",
     "nvidia.add(Dense(50))\n",
