--- a/train.ipynb
+++ b/train.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import numpy as np\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,15 +115,15 @@
      "text": [
       "Train on 19286 samples, validate on 4822 samples\n",
       "Epoch 1/5\n",
-      "19286/19286 [==============================] - 142s - loss: 0.0135 - val_loss: 0.0107\n",
+      "19286/19286 [==============================] - 130s - loss: 0.0131 - val_loss: 0.0111\n",
       "Epoch 2/5\n",
-      "19286/19286 [==============================] - 11s - loss: 0.0110 - val_loss: 0.0106\n",
+      "19286/19286 [==============================] - 10s - loss: 0.0110 - val_loss: 0.0108\n",
       "Epoch 3/5\n",
-      "19286/19286 [==============================] - 11s - loss: 0.0107 - val_loss: 0.0101\n",
+      "19286/19286 [==============================] - 12s - loss: 0.0105 - val_loss: 0.0104\n",
       "Epoch 4/5\n",
-      "19286/19286 [==============================] - 11s - loss: 0.0102 - val_loss: 0.0106\n",
+      "19286/19286 [==============================] - 12s - loss: 0.0102 - val_loss: 0.0100\n",
       "Epoch 5/5\n",
-      "19286/19286 [==============================] - 11s - loss: 0.0098 - val_loss: 0.0098\n"
+      "19286/19286 [==============================] - 12s - loss: 0.0099 - val_loss: 0.0102\n"
      ]
     }
    ],
