--- a/train.ipynb
+++ b/train.ipynb
@@ -128,6 +128,7 @@
     }
    ],
    "source": [
+    "%%time\n",
     "# Hyperparameters\n",
     "LEARNING_RATE = 1e-4\n",
     "EPOCHS = 5\n",
@@ -148,53 +149,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8036\n",
+      "6428 1608\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines = []\n",
+    "with open('./sample_data/data/driving_log.csv') as sample_file:\n",
+    "    sample_file.readline()\n",
+    "    reader = csv.reader(sample_file)\n",
+    "    for line in reader:\n",
+    "        lines.append(line)\n",
+    "print(len(lines))\n",
+    "\n",
+    "train_lines, valid_lines = train_test_split(lines, test_size=0.2, random_state=1)\n",
+    "print(len(train_lines), len(valid_lines))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BATCH_SIZE = 128\n",
     "def generator(samples, batch_size):\n",
     "    ns = len(samples)\n",
-    "    while 1:\n",
-    "        samples = shuffle(samples)\n",
-    "        for offset in range(0, ns, batch_size):\n",
-    "            batch_samples = samples[offset:offset + batch_size]\n",
-    "            images = []\n",
-    "            angles = []\n",
-    "            for sample in batch_samples:\n",
-    "                center_path = './sample_data/data/IMG/' + sample[0].split('/')[-1]\n",
-    "                center_img = cv2.imread(center_path)\n",
-    "                center_img = cv2.resize(center_img, None, fx=0.25, fy=0.5)\n",
-    "                center_img = cv2.cvtColor(center_img, cv2.COLOR_BGR2RGB)\n",
-    "                center_angle = float(line[3])\n",
-    "                images.append(center_img)\n",
-    "                angles.append(center_angle)\n",
-    "                images.append(cv2.flip(center_img, 1))\n",
-    "                angles.append(-center_angle)\n",
+    "    while True:\n",
+    "        indices = np.random.randint(0, ns, batch_size)\n",
+    "#         batch_samples = samples[indices]\n",
+    "#         print(batch_samples)\n",
+    "        images = []\n",
+    "        angles = []\n",
+    "        for indix in indices:\n",
+    "            sample = samples[indix]\n",
+    "            center_path = './sample_data/data/IMG/' + sample[0].split('/')[-1]\n",
+    "            center_img = plt.imread(center_path)\n",
+    "            center_img = cv2.resize(center_img, (80,80))\n",
+    "            center_angle = float(line[3])\n",
+    "            images.append(center_img)\n",
+    "            angles.append(center_angle)\n",
     "\n",
-    "                left_path = './sample_data/data/IMG/' + sample[1].split('/')[-1]\n",
-    "                left_img = cv2.imread(left_path)\n",
-    "                left_img = cv2.resize(left_img, None, fx=0.25, fy=0.5)\n",
-    "                left_img = cv2.cvtColor(left_img, cv2.COLOR_BGR2RGB)\n",
-    "                left_angle = float(line[3]) + 0.20\n",
-    "                images.append(left_img)\n",
-    "                angles.append(left_angle)\n",
+    "            left_path = './sample_data/data/IMG/' + sample[1].split('/')[-1]\n",
+    "            left_img = plt.imread(left_path)\n",
+    "            left_img = cv2.resize(left_img, (80,80))\n",
+    "            left_angle = float(line[3]) + 0.10\n",
+    "            images.append(left_img)\n",
+    "            angles.append(left_angle)\n",
     "\n",
-    "                right_path = './sample_data/data/IMG/' + sample[2].split('/')[-1]\n",
-    "                right_img = cv2.imread(right_path)\n",
-    "                right_img = cv2.resize(right_img, None, fx=0.25, fy=0.5)\n",
-    "                right_img = cv2.cvtColor(right_img, cv2.COLOR_BGR2RGB)\n",
-    "                right_angle = float(line[3]) - 0.25\n",
-    "                images.append(right_img)\n",
-    "                angles.append(right_angle)\n",
-    "                \n",
-    "            X_train = np.array(images)\n",
-    "            y_train = np.array(angles)\n",
-    "            yield shuffle(X_train, y_train)\n",
+    "            right_path = './sample_data/data/IMG/' + sample[2].split('/')[-1]\n",
+    "            right_img = plt.imread(right_path)\n",
+    "            right_img = cv2.resize(right_img, (80,80))\n",
+    "            right_angle = float(line[3]) - 0.10\n",
+    "            images.append(right_img)\n",
+    "            angles.append(right_angle)\n",
+    "\n",
+    "        yield np.array(images), np.array(angles)\n",
     "            \n",
-    "train_generator = generator(train_lines, batch_size=128)\n",
-    "valida_generator = generator(valida_lines, batch_size=128)"
+    "train_generator = generator(train_lines, BATCH_SIZE)\n",
+    "valid_generator = generator(valid_lines, BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "38400/38400 [==============================] - 53s - loss: 0.0017 - val_loss: 0.0020\n",
+      "Epoch 2/5\n",
+      "38400/38400 [==============================] - 48s - loss: 0.0012 - val_loss: 0.0021\n",
+      "Epoch 3/5\n",
+      "38400/38400 [==============================] - 48s - loss: 0.0011 - val_loss: 0.0020\n",
+      "Epoch 4/5\n",
+      "38400/38400 [==============================] - 49s - loss: 0.0010 - val_loss: 0.0020\n",
+      "Epoch 5/5\n",
+      "38400/38400 [==============================] - 49s - loss: 9.5612e-04 - val_loss: 0.0020\n",
+      "CPU times: user 5min 1s, sys: 13.3 s, total: 5min 15s\n",
+      "Wall time: 4min 9s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Hyperparameters\n",
+    "LEARNING_RATE = 5e-4\n",
+    "EPOCHS = 5\n",
+    "SAMPLES_PER_EPOCH = 6*BATCH_SIZE*int(len(train_lines)/BATCH_SIZE)\n",
+    "NB_VAL_SAMPLES = 3*BATCH_SIZE*int(len(valid_lines)/BATCH_SIZE)\n",
+    "\n",
+    "# Training\n",
+    "nvidia.compile(loss='mse', optimizer=Adam(LEARNING_RATE))\n",
+    "nvidia.fit_generator(train_generator, \n",
+    "                     samples_per_epoch=SAMPLES_PER_EPOCH,\n",
+    "                     validation_data=valid_generator, \n",
+    "                     nb_val_samples=NB_VAL_SAMPLES, \n",
+    "                     nb_epoch=EPOCHS, verbose=1)\n",
+    "nvidia.save('modelg.h5')"
    ]
   },
   {
@@ -202,20 +277,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Hyperparameters\n",
-    "LEARNING_RATE = 1e-4\n",
-    "EPOCHS = 7\n",
-    "\n",
-    "# Training\n",
-    "nvidia.compile(loss='mse', optimizer=Adam(LEARNING_RATE))\n",
-    "nvidia.fit_generator(train_generator, \n",
-    "                     samples_per_epoch=len(4*train_lines),\n",
-    "                     validation_data=valida_generator, \n",
-    "                     nb_val_samples=len(4*valida_lines), \n",
-    "                     nb_epoch=EPOCHS)\n",
-    "nvidia.save('model.h5')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
